--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 :root{
-  --primary:#0056b3;
+  --primary:#2596be;
   --accent:#ffd166;
   --bg:#f7f9fc;
   --muted:#6b7280;
